--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         function pesquisarMatricula() {
             var matriculaInput = parseInt(document.getElementById("matriculaInput").value); // Convertendo para número
 
-            fetch('https://raw.githubusercontent.com/ReframaxTrabalhador/Trabalhador.github.io/main/SEG1.json')
+            fetch('https://raw.githubusercontent.com/ProjetoCartao/CartaoTrabalho.github.io/blob/main/SEG1.json')
                 .then(response => response.json())
                 .then(data => {
                     var matriculaEncontrada = false;
